--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,11 @@ body {
 	width: 50px;
 	height: 50px;
 }
+
+.timer-minutes, .timer-seconds, .loop-reps {
+	width: 50px;
+	border: 1px solid lightGrey;
+	border-radius: 4px;
+	padding: 5px;
+	margin: 5px;
+}
